		Messenger: added missing post-add edit link when adding a Canned Response
		Messenger: added Search filter persistence to pagination links in Manage Messages
		Messenger: added missing post-add edit link when adding a Quick Wall Message
		Messenger: permission tweak to give Support Staff access to View Message Wall by default
		Planner: adjusted permissions to allow teachers to duplicate lessons belonging to other people (to reuse them)
		Planner: fixed Previous/Next Lesson links in lesson plan view to work for teachers who do not teach a given class
		Planner: added ability to tag units, in order to help build curriculum maps
		Planner: fixed lesson plan duplicate return bug, when not in current year
		Planner: improved readability of Unit Overview in lesson plan view, by removing chat section where no messages exist
		Planner: added field to mark whether unit should be included in curriculum maps and other summaries
		Planner: made lesson plan Summary field optional, auto grabs content from Lesson Details field if blank
		Planner: switched from JS to HTML for Smart Block placeholders
		Planner: improved text readability in weekly CLI email
		Planner: added option to share unit outline with users who do not have access to the unit planner, via the lesson planner.
		Planner: added On Time column to Work Summary by Roll Group report
		Planner: removed Unit Overview link from Edit view in Lesson Planner
		Planner: removed Unit Content from View in Lesson Planner (it's now accessible via the Unit Overview link)
		Planner: improved workflow from Departments to Lesson Planner for parents
		Planner: fixed long-link display issue in submitted homework in Planner View
		Planner: fixed unit overview MySQL issue for parents
		Planner: permission tweak for Import Outcomes
		Planner: aesthetic tweaks to Add Unit page
		Resources: improved usability of tag entry interface
		Resources: fixed breakage of tags including apostrophes