@@ -140,6 +140,7 @@ v13.0.00
 		Messenger: added Search filter persistence to pagination links in Manage Messages
 		Messenger: added missing post-add edit link when adding a Quick Wall Message
 		Messenger: permission tweak to give Support Staff access to View Message Wall by default
+		Messenger: fixed bug displaying the number of stars a message has received
 		Planner: adjusted permissions to allow teachers to duplicate lessons belonging to other people (to reuse them)
 		Planner: fixed Previous/Next Lesson links in lesson plan view to work for teachers who do not teach a given class
 		Planner: added ability to tag units, in order to help build curriculum maps
